<resources>
    <string name="app_name">Spectrum Tracker</string>
    <string name="welcome_to">Welcome To</string>
    <string name="hint_password">Password at least 8 characters</string>
    <string name="user_password">Password</string>
    <string name="hint_verify">Password Reset Code</string>
    <string name="hint_verify_code">Verification Code</string>
    <string name="hint_username">Username</string>
    <string name="btn_login">Login</string>
    <string name="btn_google_login">Google login</string>
    <string name="btn_facebook_login">Facebook login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="copyright">
           <![CDATA[
        <p class="">Copyright &commat; 2021 Spectrum Tracking &nbsp;|&nbsp; All rights reserved &nbsp;|&nbsp; <a href="https://spectrumtracking.com/Privacy.html">Privacy Policy</a> &nbsp;|&nbsp; <a href="https://spectrumtracking.com/Legal.html">Terms of Service</a></p>

        ]]>
    </string>
    <string name="activation_description">
           <![CDATA[
                <p>1. Put the <font color="#008EFB">SPECTRUMID</font> into the box below.</p>
                <p>2. For OBD tracker, plug the tracker into the OBD II port. <font color="#008EFB"><a href="https://www.carmd.com/wp/locating-the-obd2-port-or-dlc-locator/" color="#008EFB" style="text-decoration: none;">CLICK HERE</a></font> to locate OBD port. For portable tracker, fully charge your device for 2-3 hours.</p>
                <p>3. Drive your car for 5-10 minutes to get GPS location. Portable one can take up to 10 minutes when it is used the first time.\n</p>
                <p>4. Demo video here <font color="#008EFB"><a href="https://spectrumtracking.com/video.html" color="#008EFB" style="text-decoration: none;">CLICK HERE</a></font> </p>

        ]]>
    </string>
    <string name="dialog_activation_success_message_1">
           <![CDATA[
                <ol>
                <li> If your device has WiFi, the WiFi name and password are on the box.</li>
                <li> You must order WiFi data to use WiFi</li>
                </ol>
        ]]>
    </string>
    <string name="order_service_description">
           <![CDATA[
                <ul style="line-height: 2">
                   <li> &nbsp; Both a WiFi plan and a Tracking plan are required to use the OBD hotspot </li>
                   <li> &nbsp; You can order WiFi plan at any time </li>
                   <li> &nbsp; WiFi data is valid for a month from the date of purchase </li>
                   <li> &nbsp; Unused WiFi data will not rollover</li>
                   <li> &nbsp; When you use all purchased WiFi data the WiFi name will not show </li>
                   <li> &nbsp; WiFi will not show when engine is off </li>
                   <li> &nbsp; By default WiFi plan is not auto renewed. Contact us if you want to have an auto renewed WiFi plan </li>
                </ul>
        ]]>
    </string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password_confirm">Confirm New Password</string>
    <string name="btn_register">Register</string>
    <string name="btn_verify">Submit</string>
    <string name="btn_reset">Reset Password</string>
    <string name="back">Back</string>
    <string name="request_password">"REQUEST\nPASSWORD"</string>
    <string name="cancel">CANCEL</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">"Check out"</string>
    <string name="price">"price:"</string>
    <string name="per_item">" per item"</string>
    <string name="remove">Remove</string>
    <string name="tacker_id">Spectrum ID</string>
    <string name="spectrum_id_4_8_letters">SpectrumID: 4-8 letters long</string>
    <string name="vehicle_name">VEHICLE NAME</string>
    <string name="driver_name">Driver</string>
    <string name="driver_country">TRACKER LOCATION</string>
    <string name="activate">Activate</string>
    <string name="service_plan_comment">"All new trackers include a free month service. Service plans can be renewed 2 weeks before the expiration date. LTE Data will NOT roll over to next period."</string>
    <string name="name">Name</string>
    <string name="expiration_date">"Expiration"</string>
    <string name="expiration_date_title">Expiration date</string>
    <string name="service_plan">Tracking Plan</string>
    <string name="lte_data">WiFi Plan</string>
    <string name="auto_renew">Auto Renew</string>
    <string name="no_auto_renew">No Auto Renew</string>
    <string name="proceed_to_check_out">Check out</string>
    <string name="title_activity_update_credit_card">UpdateCreditCardActivity</string>
    <string name="update_credit_card">Update Credit Card</string>
    <string name="mm_yy">MM/YY</string>
    <string name="title_activity_update_driver_info">UpdateDriverInfoActivity</string>
    <string name="cv_code">Security code</string>
    <string name="card_number">Card number</string>
    <string name="name_on_card">Name on card</string>
    <string name="update_driver_information">Update Driver Information</string>
    <string name="driver_name_label">"Driver Name: "</string>
    <string name="driver_phone_label">"Driver Phone: "</string>
    <string name="vehicle_name_label">"Vehicle Name: "</string>
    <string name="plate_number_label">"Plate Number: "</string>
    <string name="btn_update">Update</string>
    <string name="forget_password_dialog_header">Enter your email address to get password reset code</string>
    <string name="before_tax">Before Tax</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="place_your_order">Place Order</string>
    <string name="city">CITY</string>
    <string name="street_address">STREET ADDRESS</string>
    <string name="state">State</string>
    <string name="zip">Zip code</string>
    <string name="billing_information">Billing Information</string>
    <string name="order_summary">Order Summary</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="okay">Okay</string>
    <string name="label_service_plan">Service Plan:</string>
    <string name="label_lte_plan">LTE Plan:</string>
    <string name="label_tax">Tax:</string>
    <string name="label_total">Total:</string>
    <string name="label_time">Time:</string>
    <string name="activity_label_checkout">Checkout</string>
    <string name="options">Select Vehicle</string>
    <string name="vehicle">Vehicle</string>
    <string name="phone">Phone</string>
    <string name="search">Search</string>
    <string name="please_wait">Please wait</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="load_replay">Load Replay</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="load_report">Report</string>
    <string name="title_activity_shipping_address">ShippingAddressActivity</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="email">Email</string>
    <string name="street_address_lowercase">Street Address</string>
    <string name="city_lowercase">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="state_lowercase">State</string>
    <string name="make_payment">Make Payment</string>
    <string name="plate_number">Plate Number</string>
    <string name="vehicle_year">VEHICLE YEAR</string>
    <string name="last_online_time">Online</string>
    <string name="expiration_date_">Expiration</string>
    <string name="speed">Speed</string>
    <string name="contact_us">Contact us</string>
    <string name="contact_mail">contact@spectrumtracking.com</string>
    <string-array name="cuntry_arrays">
        <item>USA</item>
        <item>Canada or Mexico</item>
        <item>Other Countries</item>
    </string-array>
    <string name="on_the_box">4-8 letters long</string>
    <string name="card_expiry">Expiration Date</string>
    <string name="driver_color_label">Color</string>
    <string name="driver_autorenew_label">Auto Renew</string>
    <string name="dialog_activate_success_message">Congratulations! Your tracker is now activated. Please wait for 5 minutes for the tracker to start. If it does not show on the map, unplug the tracker from the OBD port and then plug it back  to reset the device. Contact contact@spectrumtracking.com for assistance.</string>
    <string name="title_activity_get_photo">getPhotoActivity</string>
    <string name="gps_is_enabled_required">GPS is enabled (Required)</string>
    <string name="location_permission_required">Location Permission (Required)</string>
    <string name="battery_optimization_is_disabled_optional">Battery Optimization is disabled (Optional)</string>
    <string name="change_setting">Change Setting</string>
    <string name="next">Next</string>
    <string name="remember_me">Remember me</string>
    <string name="monitor">Monitor</string>
    <string name="replay">Replay</string>
    <string name="report">Report</string>
    <string name="setting">Setting</string>
    <string name="click_disable_battery_optimization_from_previous_panel">Click Disable Battery Optimization from previous panel.</string>
    <string name="tap_not_optimized_dropdown_menu">Tap Not Optimized dropdown menu.</string>
    <string name="tap_all_apps">Tap All apps.</string>
    <string name="find_spectrum_tracker_app">Find Spectrum Tracker app.</string>
    <string name="turn_off_optimized_switch">Turn off optimized switch.</string>
    <string name="we_recommend_to_turn_off_batter_optimization_for_spectrum_tracking_app_if_you_track_your_phone">We recommend to turn off batter optimization for Spectrum Tracking app if you track your phone.</string>
    <string name="disable_battery_optimization">Disable battery optimization</string>
    <string name="show_me_how">Show me how</string>
    <string name="skip">Skip</string>
    <string name="invite_friend_to_chat">Invite friend to chat</string>
    <string name="log_out">Log Out</string>
    <string name="remember_account_on_this_device">Remember account on this device?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chat_invitation">Chat Invitation</string>
    <string name="update_vehicle">Update Vehicle</string>
    <string name="data_plan">Data Plan</string>
    <string name="text_alert">Text Alert</string>
    <string name="_10_digits_phone_number">10 digits phone number</string>
    <string name="email_alert">Email Alert</string>
    <string name="email_address">email address</string>
    <string name="sound_alert">Sound Alert</string>
    <string name="vibration_alert">Vibration Alert</string>
    <string name="save">Save</string>
    <string name="speeding_mph">Speeding [mph]</string>
    <string name="harsh_turn">Harsh Turn</string>
    <string name="unplug_device">Unplug Device</string>
    <string name="harsh_accel">Harsh Accel</string>
    <string name="engine_on">Engine On</string>
    <string name="engine_off">Engine Off</string>
    <string name="geofence">Geofence</string>
    <string name="airplane_mode">Airplane Mode</string>
    <string name="invite">Invite</string>
    <string name="fence_name">Fence Name</string>
    <string name="double_click_to_finish_drawing">Double click to finish drawing</string>
    <string name="email_invitation_to_share">Email invitation to share</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
</resources>