<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimen_5">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edit_driver_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/driver_name"/>

        <EditText
            android:id="@+id/edit_driver_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/card_expiry"/>

        <EditText
            android:id="@+id/edit_vehicle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/vehicle_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5"
        android:gravity="top|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dlg_update_driver_info_ok"
            style="@style/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_update" />

        <View
            android:layout_width="@dimen/dimen_5"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_dlg_update_driver_info_cancel"
            style="@style/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />
    </LinearLayout>
</LinearLayout>