<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="@dimen/dimen_5">

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_6"
        android:paddingTop="@dimen/dimen_8"
        android:paddingRight="@dimen/dimen_6"
        android:paddingBottom="@dimen/dimen_4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_2"
                android:text="@string/forget_password_dialog_header" />

            <EditText
                android:id="@+id/edit_forgot_password_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:singleLine="true"
                android:textColor="@color/main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:gravity="top|bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_dlg_forgot_password_ok"
                style="@style/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton_blue1"
                android:text="@string/request_password"
                android:textColor="@color/white" />

            <View
                android:layout_width="@dimen/dimen_5"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_dlg_forgot_password_cancel"
                style="@style/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton_blue1"
                android:text="@string/cancel"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>