<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.UpdateCreditCardFragment"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10"
            card_view:cardElevation="@dimen/dimen_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    tools:ignore="RtlHardcoded">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_credit_cards"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_on_card"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edit_name_on_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_number"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edit_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/expiration_date_title"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/edit_expiration_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mm_yy"
                            android:singleLine="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cv_code"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/edit_cv_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                    </LinearLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/btn_update_credit_card"
                    style="@style/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:textColor="#0E2C51"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/update_credit_card" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </ScrollView>

</LinearLayout>